@@ -104,4 +104,6 @@ Changes in version 2.1.3
   STL_STRING_BUG for a full description. I'm asserting this is a Microsoft STL
   bug, since &string and string.c_str() should never be the same. Nevertheless,
   the code works around it.
-
+- Urivan Saaib pointed out a compiler conflict, where the C headers define
+  the isblank macro, which was wiping out the TiXmlString::isblank() method.
+  The method has been removed.
